[gd_scene load_steps=2 format=3 uid="uid://menu001"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "道 途"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "与天争命 · 与人争运 · 渡劫飞升"
horizontal_alignment = 1
modulate = Color(0.7, 0.85, 1.0, 0.8)

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StartBtn" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
text = "开始修炼"

[node name="MultiplayerBtn" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
text = "联机修炼"

[node name="SettingsBtn" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
text = "设置"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "Demo v0.1.0"
horizontal_alignment = 2
modulate = Color(1, 1, 1, 0.4)
